<resources>
    <string name="app_name">ReachwellAM</string>
    <string name="prompt_username">USER NAME</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_new_password">NEW PASSWORD</string>
    <string name="confirm_new_password">CONFIRM NEW PASSWORD</string>
    <string name="prompt_title">TITLE/DESCRIPTION</string>
    <string name="prompt_location_name">LOCATION NAME</string>
    <string name="prompt_email">EMAIL/PHONE NUMBER</string>
    <string name="prompt_repeat">CONFIRM PASSWORD</string>
    <string name="change_password">Change Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="sign_up">Sign Up!</string>
    <string name="mobile_long_number_error_message">Mobile no cannot exceed more than 17 digits</string>
    <string name="mobile_short_number_error_message">Mobile no cannot be less than 10 digits</string>
    <string name="referral_code_error_message">cannot exceed more than 6 characters</string>
    <string name="empty_message">Field cannot be empty</string>
    <string name="too_long">cannot exceed more than 15 characters</string>
    <string name="error_invalid_email">Invalid Email id / Phone number</string>
    <string name="register">Have you Smiled yet?</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_mismatch">Passwords do not match!</string>
    <string name="error_field_required">Enter minimum of 3 characters</string>
    <string name="password_too_long_length">cannot exceed more than 12 characters</string>
    <string name="email_error_field">Enter a valid email address</string>
    <string name="country_code_error">Invalid phone number.Please add country code to the phone number</string>
    <string name="username_or_mobile_empty">Mobile/Username cannot be empty</string>
    <string name="invalid_username_or_mobile">Invalid mobile number/username</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_mobile_number">Invalid Mobile number</string>
    <string name="empty_mobile_number">Mobile number cannot be empty</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_home"> </string>
    <string name="device_token">APA91bEBZq1Qgpy-lOZSIc7ojPkIeHoj_Wop1zPCmzoatyqzQU44Z6DALttJzWkZNKpYp1AfDdr0yYlorXSUGdY52jF2SLMEfVrL3zSpOuFbl0ydry4ZdOUrhBXwEKXdBkieXu-1aBzC9wGmE3tgwp1eBmMrZOTONw</string>
    <string name="mix_panel_project_token">d464844034c774fe39d5141e36665050</string>
    <string name="tap_joy_sdk_key">L4oFhcBkRzG6zaPVr3EgWAECFOvLIGhkJHuoCcy8zPn1VhVnfFPPiAqTwPQ8</string>
    <string name="title_activity_register"> </string>
    <string name="app_id">1748224718749241</string>
    <string name="title_activity_comments">Comments</string>
    <string name="create_account">SIGN UP</string>
    <string name="create_moment">Create Moment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="post_button">Post</string>
    <string name="clear_cache">Clear Image Cache</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="error_password">Password is Empty</string>
    <string name="username_empty">Username cannot be empty</string>
    <string name="terms_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_custom_camera">CustomCameraActivity</string>
    <string name="prompt_comment">MY COMMENT</string>
    <string name="prompt_search_tags">Search Tags</string>
    <string name="prompt_first_name">Enter First Name</string>
    <string name="prompt_last_name">Enter Last Name</string>
    <string name="back_button">Back</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_upload_preview">UploadPreviewActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="prompt_description">Enter Description</string>
    <string name="set_the_precision"><u>Search Range</u></string>
    <string name="project_number">012345678912</string>
    <string name="load_more"><u>Load More</u></string>
    <string name="notification">Notification</string>
    <string name="momentcapture">MomentCapture</string>
    <string name="home">Home</string>
    <string name="chatmessages">ChatMessages</string>
    <string name="search">Search</string>
    <string name="coupon_details"><u>Coupon Details</u></string>
    <string name="enter_your_registered_email_id">Enter your registered Mobile Number/Username</string>
    <string name="activation_pending">Activation Pending</string>
    <string name="phone_number">MOBILE NUMBER</string>
    <string name="username">Username</string>
    <string name="select_country">SELECT COUNTRY</string>
    <string name="faq">FAQ</string>
    <string name="events">Events</string>
    <string name="copy_my_referral_code">Copy My Referral Code</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="referral_code">Referral code</string>
    <string name="back">BACK</string>
    <string name="otp">OTP</string>
    <string name="mobile_number_username">Mobile/Username</string>
    <string name="user_name">User name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="gender">Gender</string>
    <string name="m">M</string>
    <string name="f">F</string>
    <string name="born_on">Born On</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile number</string>
    <string name="about_me">About me</string>
    <string name="save">Save</string>
    <string name="forgot_username_password">Forgot Username/Password?</string>
    <string name="create_account_signup">CREATE ACCOUNT</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="validate">VALIDATE</string>
    <string name="clear_all">Clear all</string>
    <string name="chat_server">chatter.jahasatech.com</string>
    <string name="saved_offers">SAVED OFFERS</string>
    <string name="offers">OFFERS</string>
    <string name="smiled">SMILED</string>
    <string name="squarecamera__app_name">SquareCamera</string>
    <string name="squarecamera__action_settings">Settings</string>
    <string name="squarecamera__start_image_capture">Take New Picture!</string>
    <string name="squarecamera__capture_image">Snap It!</string>
    <string name="squarecamera__save_image">Save</string>
    <string name="squarecamera__cancel">Cancel</string>
    <string name="squarecamera__swap_camera">Swap</string>
    <string name="squarecamera__flash">Flash</string>
    <string name="squarecamera__auto_flash">Auto Flash</string>
    <string name="squarecamera__no_flash">No Flash</string>
    <string name="squarecamera__recapture_image">Retake Picture</string>
    <string name="squarecamera__capturing_image">Taking New Picture</string>
    <string name="squarecamera__done">Done</string>
    <string name="squarecamera__request_write_storage_permission_text">Approval is needed to save your photo on your device</string>
    <string name="account_not_activated">Your account is not activated.</string>
    <string name="resend_activation_link">Do you want us to resend activation link?</string>
    <string name="ok_text">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="blocked_users">Blocked Users</string>
    <string name="send">Send</string>
    <string name="location">Location</string>
    <string name="share">Share</string>
    <string name="reset_password">Reset</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="normal_filter">Normal</string>
    <string name="blur_filter">Blur</string>
    <string name="greyscale_filter">GreyScale</string>
    <string name="sepia_filter">Sepia</string>
    <string name="invert_filter">Invert</string>
    <string name="sharpen_filter">Sharpen</string>
    <string name="toon_filter">Toon</string>
    <string name="pixellate_filter">Pixellate</string>
    <string name="emboss_filter">Emboss</string>
    <string name="sobel_edge_filter">Sobel Edge</string>
    <string name="vignette_filter">Vignette</string>
    <string name="posterize_filter">Posterize</string>
    <string name="laplacian_filter">Laplacian</string>
    <string name="false_color_filter">False color</string>
    <string name="hue_filter">Hue</string>
    <string name="crop_text">Crop</string>
    <string name="min_sale_text">Min sale</string>
    <string name="max_redemption_text">Max redemption</string>
    <string name="discount_text">Discount</string>
    <string name="redeem_offer_button_text">Redeem Offer</string>
    <string name="merchant_points_text">Merchant Points</string>
    <string name="preference_heading_text">Moments Distance</string>
    <string name="business_types_list_heading_text">Moments Category</string>
    <string name="sale_amount_text">Sale Amount</string>
    <string name="generate_code_text">GENERATE QR CODE</string>
    <string name="create_account_text_register">By clicking Create Account you agree to the</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="reward_points_text">Reward points</string>
    <string name="available_points_text">Available</string>
    <string name="smiled_reward_points_text">Smiled rewards</string>
    <string name="merchant_reward_points_text">Merchant rewards</string>
    <string name="last_transaction_text">Last Transaction</string>
    <string name="points_text">(Points gained)</string>
    <string name="search_hint_text">SEARCH</string>
    <string name="go_text">GO</string>
    <string name="profile_text">Profile</string>
    <string name="preference_text">Preference</string>
    <string name="change_password_text">Change Password</string>
    <string name="nearby_merchants_text">NearBy Merchants</string>
    <string name="terms_of_use_text">Terms of Use</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="logout_text">LogOut</string>
    <string name="delete_text">Delete</string>
    <string name="confirm_text">Confirm</string>
    <string name="post_on_facebook_text">Post on Facebook</string>
    <string name="title_text">Title</string>
    <string name="visit_text">Visit</string>
    <string name="no_text">NO</string>
    <string name="discount_applicable_text">*Discount is applicable for selected ranges</string>
    <string name="view_text">View</string>
    <string name="redeemed_text">REDEEMED</string>
    <string name="change_my_smile_text">Change my Smile</string>
    <string name="report_this_moment_text">Report this moment</string>
    <string name="complaint_message_text">Help us to understand what\'s wrong?</string>
    <string name="report_hint_text">Report..</string>
    <string name="close_text">Close</string>
    <string name="submit_text">Submit</string>
    <string name="admin_action_taking_message">Your message is submitted, Admin will take action on this</string>
    <string name="thank_you_text">Thank you</string>
    <string name="auto_text">Auto</string>
    <string name="terms_of_application_text">Terms of Application</string>
    <string name="terms_message_text">By tapping the agree button,you confirm that you have read end user license agreement and you agree to be bound by them.</string>
</resources>