<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".User.Views.Activity.LoginActivity">

    <!-- Login progress -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/username_login_form"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="80dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/reachwell_logo" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="242dp"
                        android:layout_height="36dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="28dp"
                        android:layout_marginTop="50dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/tv_username"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:alpha="0.4"
                            android:hint="@string/mobile_number_username"
                            android:imeOptions="actionNext"
                            android:inputType="textPhonetic"
                            android:maxLines="1"
                            android:textCursorDrawable="@color/blue"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:backgroundTint="@android:color/holo_red_light"
                            android:textSize="15sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="242dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                            <EditText
                                android:id="@+id/txtPassword"
                                android:layout_width="0dp"
                                android:layout_height="38dp"
                                android:layout_weight="1"
                                android:alpha="0.4"
                                android:digits="!@#$%^*()_&amp;-0987654321qwertzuiopasdfghjklyxcvbnmQWERTZUIOPASDFGHJKLYXCV‌​BNM"
                                android:hint="@string/prompt_password"
                                android:singleLine="true"
                                android:imeOptions="actionDone"
                                android:inputType="textPassword"
                                android:textAlignment="center"
                                android:textCursorDrawable="@color/blue"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                android:backgroundTint="@android:color/holo_red_light"
                                android:textSize="15sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/sign_in_button"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/register_button"
                        android:layout_width="250dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/create_account" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/forgot"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/forgot_username_password"
                            android:textAllCaps="false"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>



            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>